# open-catalog

./: .clang-format  .gitignore  404.html  NOTICE  README.md  docusaurus.config.ts  index.html  lunr-index.json  package-lock.json  package.json  search-doc.json  sitemap.xml
.github/utils/: ValidateReadmeTable.py
.github/workflows/: Compile-and-run.yml  Test-benchmark-scripts.yml  check-webpage.yml  compile-check-examples.yml  deploy-webpage.yml  test-benchmark-script.yml  (+2 more)
Benchmark/: .gitignore  CMakeLists.txt  README.md  multiple-compilers.sh  run-benchmarks.py  run-benchmarks.sh
Benchmark/cmake/modules/: Benchmark.cmake  Config.cmake  Utils.cmake
Benchmark/src/: Benchmark.h  CMakeLists.txt  PWR003.cpp  PWR022.cpp  PWR031.cpp  PWR032.cpp  PWR037.cpp  PWR039.cpp  PWR043.cpp  PWR046.cpp  PWR062.cpp  PWR068.cpp  PWR069.cpp  PWR070.cpp  PWR071.cpp  PWR072.cpp  PWR073.cpp  PWR075.cpp  PWR079.cpp  PWR080.cpp  PWR081.cpp  PWR082.cpp  PWR083.cpp  PWR086.cpp  PWR087.cpp
Glossary/: Locality-of-reference.md  Loop-carried-dependencies.md  Loop-fission.md  Loop-interchange.md  Loop-sectioning.md  Loop-tiling.md  Loop-unswitching.md  Memory-access-pattern.md  Multithreading.md  Offloading-data-transfers.md  Offloading.md  OpenMP-canonical-form.md  OpenMP.md  Parallelization.md  Patterns-for-performance-optimization.md  Perfect-loop-nesting.md  Pointer-aliasing.md  Row-major-and-column-major-order.md  Scalar-to-vector-promotion.md  Strength-reduction.md  Variable-scope.md  Variable-scoping-in-the-context-of-OpenMP.md  Vectorization.md
static/: _category_.json
(+642 files in other folders)
